syntax = "proto3";

option csharp_namespace = "grpcClient";

package message;

service Message {
  rpc SendMessage (MessageRequest) returns (stream MessageResponse);
}

message MessageRequest {
  string name = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
}
